// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-gKseQn hEEPLy"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 gySsHC FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButtonKind-sc-1vhfpnt-0 dfTKjZ Select__StyledSelectDropButton-sc-17idtfo-2 djZTSo"
          disabled=""
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eWFPqT"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iLmQXk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 cvGVMp Select__SelectTextInput-sc-17idtfo-0 fhNCWX"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value="A dog"
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dFXnlW"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 dHUAHx"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-gKseQn hEEPLy"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButtonKind-sc-1vhfpnt-0 jqooVk Select__StyledSelectDropButton-sc-17idtfo-2 djZTSo"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eWFPqT"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iLmQXk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 cvGVMp Select__SelectTextInput-sc-17idtfo-0 fPXvfn"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dFXnlW"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 dHUAHx"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input inside the dropdown, that can search through the options 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-gKseQn hEEPLy"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gySsHC FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButtonKind-sc-1vhfpnt-0 dfTKjZ Select__StyledSelectDropButton-sc-17idtfo-2 djZTSo"
          disabled=""
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eWFPqT"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iLmQXk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 cvGVMp Select__SelectTextInput-sc-17idtfo-0 fhNCWX"
                  id="pet__input"
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dFXnlW"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 dHUAHx"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-gKseQn hEEPLy"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="pet"
      >
        Which pet to get?
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 cTuErc"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButtonKind-sc-1vhfpnt-0 jqooVk Select__StyledSelectDropButton-sc-17idtfo-2 djZTSo"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eWFPqT"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iLmQXk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 cvGVMp Select__SelectTextInput-sc-17idtfo-0 fPXvfn"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dFXnlW"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 dHUAHx"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-gKseQn hEEPLy"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButtonKind-sc-1vhfpnt-0 jqooVk Select__StyledSelectDropButton-sc-17idtfo-2 djZTSo"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eWFPqT"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iLmQXk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 cvGVMp Select__SelectTextInput-sc-17idtfo-0 fPXvfn"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dFXnlW"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 dHUAHx"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-gKseQn hEEPLy"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 bxqGsO FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButtonKind-sc-1vhfpnt-0 jqooVk Select__StyledSelectDropButton-sc-17idtfo-2 djZTSo"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eWFPqT"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iLmQXk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 cvGVMp Select__SelectTextInput-sc-17idtfo-0 fPXvfn"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dFXnlW"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 dHUAHx"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 boCmmO"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-gKseQn hEEPLy"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButtonKind-sc-1vhfpnt-0 jqooVk Select__StyledSelectDropButton-sc-17idtfo-2 djZTSo"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 eWFPqT"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iLmQXk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 cvGVMp Select__SelectTextInput-sc-17idtfo-0 fPXvfn"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dFXnlW"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 dHUAHx"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kwoXLv"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
